# RPS

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameInterface.cpp  GameInterface.h  README.md  main.cpp  test_main.cpp
include/: Game.h  GameConstants.h  GameInterface.h  GameManager.h
src/: Game.cpp  GameInterface.cpp  main.cpp
tests/: test_main.cpp
